try c value from 1e-5 to 1e5

--- a/wokring_notebook.ipynb
+++ b/wokring_notebook.ipynb
@@ -1830,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "4b30cc94-3b80-4826-9de4-28f491eafad0",
    "metadata": {},
    "outputs": [
@@ -1838,13 +1838,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Training accuracy: 0.697\n",
+      "Training accuracy: 0.693\n",
+      "Training accuracy: 0.708\n",
+      "Training accuracy: 0.760\n",
+      "Training accuracy: 0.864\n",
+      "Training accuracy: 0.914\n",
       "Training accuracy: 0.955\n",
-      "Training accuracy: 0.963\n",
-      "Training accuracy: 0.966\n",
-      "Training accuracy: 0.967\n",
-      "Training accuracy: 0.970\n",
       "Training accuracy: 0.978\n",
-      "Training accuracy: 0.980\n"
+      "Training accuracy: 0.986\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shigure/anaconda3/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 0.992\n",
+      "Training accuracy: 0.994\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shigure/anaconda3/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
@@ -1927,7 +1965,7 @@
     "\n",
     "y_true = np.ravel(y_train_df)\n",
     "\n",
-    "c_list = [10, 20, 30, 40, 50, 100, 200]\n",
+    "c_list = [1e-5, 1e-4, 1e-3, 1e-2, 1e-1, 1e0, 1e1, 1e2, 1e3, 1e4, 1e5]\n",
     "for c in c_list:\n",
     "    clf = sklearn.linear_model.LogisticRegression(C=c, max_iter=1000)\n",
     "    \n",
