progress on notebook

--- a/wokring_notebook.ipynb
+++ b/wokring_notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "id": "67146029-59b1-4d1c-95bf-067e34e15c3a",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,16 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import random\n",
     "import sklearn.linear_model\n",
     "import sklearn.pipeline\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
     "import nltk\n",
     "import tokenize_text\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "plt.style.use('seaborn-v0_8')"
    ]
   },
   {
@@ -37,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "2939be4d-8fa7-41db-82bd-290a23ee40c9",
    "metadata": {},
    "outputs": [
@@ -106,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c360262b-ddea-4497-8bbe-2bb383b81a76",
    "metadata": {},
    "outputs": [],
@@ -132,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "97d8101f-36ee-4d72-afff-c3c53484683d",
    "metadata": {},
    "outputs": [],
@@ -150,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "98a255ec-9c5a-4e13-9de1-1dc9528d1277",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "4bccb3a1-427e-4629-9412-4510c85a5a76",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "4b30cc94-3b80-4826-9de4-28f491eafad0",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b126f4e8",
+   "id": "20d750d6",
    "metadata": {},
    "source": [
     "## Step4: Create Pipelines"
@@ -1161,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "fdd8c78c-a98b-4e55-b2a2-879b318effa8",
    "metadata": {},
    "outputs": [],
@@ -1191,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "319c46af",
    "metadata": {},
    "outputs": [
@@ -1313,16 +1317,63 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16dba6fe",
+   "id": "917db808",
    "metadata": {},
    "source": [
-    "## Step6: Using the Best Pipeline to Predict the result"
+    "## Step6: Hyperparameter Selection for Logistic Regression Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "79210cd7",
+   "execution_count": 64,
+   "id": "8f92137a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cv_tr_bce_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[64], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(np\u001b[38;5;241m.\u001b[39mlog10(my_parameter_grid_by_name[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmy_classifier__C\u001b[39m\u001b[38;5;124m'\u001b[39m]), cv_tr_bce_list, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbs-\u001b[39m\u001b[38;5;124m'\u001b[39m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain BCE\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(np\u001b[38;5;241m.\u001b[39mlog10(my_parameter_grid_by_name[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmy_classifier__C\u001b[39m\u001b[38;5;124m'\u001b[39m]), cv_va_bce_list, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrs-\u001b[39m\u001b[38;5;124m'\u001b[39m, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalid BCE\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# plt.plot(np.log10(C_grid), tr_err_list, 'b:', label='train err')\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# plt.plot(np.log10(C_grid), va_err_list, 'r:', label='valid err')\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cv_tr_bce_list' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tr_bce_list = list()\n",
+    "va_bce_list = list()\n",
+    "te_bce_list = list()\n",
+    "\n",
+    "my_tr_err = sklearn.metrics.zero_one_loss(y_tr_M, yproba1_tr_M >= 0.5)\n",
+    "my_va_err = sklearn.metrics.zero_one_loss(y_va_N, yproba1_va_N >= 0.5)\n",
+    "tr_err_list.append(my_tr_err)\n",
+    "va_err_list.append(my_va_err)\n",
+    "\n",
+    "plt.plot(np.log10(my_parameter_grid_by_name['my_classifier__C']), cv_tr_bce_list, 'bs-', label='train BCE')\n",
+    "plt.plot(np.log10(my_parameter_grid_by_name['my_classifier__C']), cv_va_bce_list, 'rs-', label='valid BCE')\n",
+    "\n",
+    "# need to findout bce list\n",
+    "\n",
+    "plt.ylabel('error')\n",
+    "plt.xlabel(\"$\\log_{10} C$\");\n",
+    "plt.legend(bbox_to_anchor=(1.5, 0.5)) # make legend outside plot\n",
+    "plt.ylim([0, 2]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e48280e1",
+   "metadata": {},
+   "source": [
+    "## Step7: Using the Best Pipeline to Predict the Result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "832dcafd",
    "metadata": {},
    "outputs": [
     {
@@ -1556,8 +1607,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "id": "74dca7c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import sklearn.metrics\n",
+    "\n",
+    "def calc_confusion_matrix_for_probas_and_threshold(ytrue_N, yproba1_N, thr):\n",
+    "    ytrue_N = np.asarray(ytrue_N, dtype=np.int32)\n",
+    "    \n",
+    "    # Determine hard predictions given probabilities\n",
+    "    yproba1_N = np.asarray(yproba1_N, dtype=np.float64)\n",
+    "    yhat_N = np.asarray(yproba1_N >= thr, dtype=np.int32)\n",
+    "\n",
+    "    cm = sklearn.metrics.confusion_matrix(ytrue_N, yhat_N)\n",
+    "    cm_df = pd.DataFrame(data=cm, columns=[0, 1], index=[0, 1])\n",
+    "    cm_df.columns.name = 'Predicted'\n",
+    "    cm_df.index.name = 'True'\n",
+    "    return cm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "36b48ea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted     0     1\n",
+      "True                 \n",
+      "0          1164    36\n",
+      "1            51  1149\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(calc_confusion_matrix_for_probas_and_threshold(y_train_df, yhat_tr_N, 0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ca1b88e2",
+   "id": "8c50d9bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "7189e219",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False Positive Examples:\n",
+      "imdb\tNot recommended.  \n",
+      "imdb\tAll in all, a great disappointment.  \n",
+      "amazon\tFirst of all, it doesn't wear well.\n",
+      "yelp\tI do love sushi, but I found Kabuki to be over-priced, over-hip and under-services.\n",
+      "yelp\tFor service, I give them no stars.\n",
+      "\n",
+      "False Nagetive Examples:\n",
+      "amazon\tWould recommend this item.\n",
+      "imdb\tI struggle to find anything bad to say about it.  \n",
+      "imdb\tGive this one a look.  \n",
+      "yelp\tFood was so gooodd.\n",
+      "yelp\tI could eat their bruschetta all day it is devine.\n"
+     ]
+    }
+   ],
+   "source": [
+    "FP = list(np.where((yhat_tr_N == 1) & (y_true == 0))[0])\n",
+    "FN = list(np.where((yhat_tr_N == 0) & (y_true == 1))[0])\n",
+    "\n",
+    "# debug you\n",
+    "# print(yhat_tr_N)\n",
+    "# print(y_true)\n",
+    "# print(len(yhat_tr_N), len(y_true))\n",
+    "# print(FP)\n",
+    "# print(FN)\n",
+    "FP_list = list()\n",
+    "FN_list = list()\n",
+    "\n",
+    "rand_5_examples_FP = random.sample(FP, 5)\n",
+    "rand_5_examples_FN = random.sample(FN, 5)\n",
+    "# print(rand_5_examples_FP)\n",
+    "\n",
+    "\n",
+    "for index in rand_5_examples_FP:\n",
+    "    result = x_train_df['website_name'][index], x_train_df['text'][index]\n",
+    "    FP_list.append(result)\n",
+    "    \n",
+    "for index in rand_5_examples_FN:\n",
+    "    result = x_train_df['website_name'][index], x_train_df['text'][index]\n",
+    "    FN_list.append(result)\n",
+    "    \n",
+    "print(\"False Positive Examples:\")\n",
+    "for row in FP_list:\n",
+    "    print('\\t'.join(row))\n",
+    "    \n",
+    "print()\n",
+    "print(\"False Nagetive Examples:\")\n",
+    "for row in FN_list:\n",
+    "    print('\\t'.join(row))\n",
+    "# website_name = x_train_df['website_name']\n",
+    "# text = x_train_df['text']\n",
+    "\n",
+    "# print(\"False Positives:\")\n",
+    "# for idx in FP:\n",
+    "#     print(f\"Website: {website_name[idx]}\")\n",
+    "#     print(f\"Text: {text[idx]}\")\n",
+    "#     print(f\"Predicted: {yhat_test_N[idx]}\")\n",
+    "#     print(f\"Actual: {y_true[idx]}\")\n",
+    "#     print()\n",
+    "\n",
+    "# print(\"False Negatives:\")\n",
+    "# for idx in FN:\n",
+    "#     print(f\"Website: {website_name[idx]}\")\n",
+    "#     print(f\"Text: {text[idx]}\")\n",
+    "#     print(f\"Predicted: {yhat_test_N[idx]}\")\n",
+    "#     print(f\"Actual: {y_true[idx]}\")\n",
+    "#     print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d890315",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7504faa8",
    "metadata": {},
    "outputs": [],
    "source": []
