--- a/BERTEmbeddings.ipynb
+++ b/BERTEmbeddings.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -218,6 +218,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
+    "import sys\n",
     "# Initialize BERT tokenizer and model\n",
     "model_name = \"bert-base-uncased\"\n",
     "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,12 +294,13 @@
     "x_test_df = pd.read_csv('data_reviews/x_test.csv')\n",
     "\n",
     "tr_text_list = x_train_df['text'].values.tolist()\n",
-    "te_text_list = x_test_df['text'].values.tolist()"
+    "te_text_list = x_test_df['text'].values.tolist()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +336,14 @@
       "Done with 200 sentences\n",
       "Done with 300 sentences\n",
       "Done with 400 sentences\n",
-      "Done with 500 sentences\n"
+      "Done with 500 sentences\n",
+      "tensor([[-0.5088,  0.0058,  0.0696,  ..., -0.0996,  0.0217,  0.5051],\n",
+      "        [-0.2667,  0.0248, -0.1088,  ..., -0.2166,  0.5349,  0.5795],\n",
+      "        [-0.6949, -0.0016,  0.0101,  ..., -0.3160,  0.1591,  0.4699],\n",
+      "        ...,\n",
+      "        [-0.5515, -0.2693, -0.1980,  ..., -0.1455,  0.0697,  0.5685],\n",
+      "        [-0.2548, -0.0763,  0.3773,  ..., -0.2411,  0.2729,  0.6000],\n",
+      "        [-0.1548,  0.2592,  0.1454,  ..., -0.2707,  0.4933,  0.2296]])\n"
      ]
     }
    ],
@@ -343,12 +352,43 @@
     "tr_embedding = get_bert_embedding(tr_text_list)\n",
     "\n",
     "print('Generating embeddings for test sequences...')\n",
-    "te_embedding = get_bert_embedding(te_text_list)\n"
+    "te_embedding = get_bert_embedding(te_text_list)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you have several dozen or several hundred contacts, then imagine the fun of sending each of them one by one.\n",
+      "Done with 100 sentences\n",
+      "torch.Size([111, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pd.set_option('display.width', 800)\n",
+    "# pd.set_option('display.max_columns', 800)\n",
+    "# np.set_printoptions(threshold=sys.maxsize)\n",
+    "# file_path = 'data_reviews/test.txt'\n",
+    "\n",
+    "# with open(file_path, 'w') as fp:\n",
+    "#     print(tr_text_list[300], file=fp)\n",
+    "#     print(get_bert_embedding(tr_text_list[300]).shape, file=fp)\n",
+    "\n",
+    "\n",
+    "print(tr_text_list[299])\n",
+    "print(get_bert_embedding(tr_text_list[299]).shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
